[project]
name = "ddmatch"
version = "0.1"
requires-python = ">=3.9"
description = "Diffeomorphic deformations for shape matching"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numba",
    "matplotlib",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"